<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_game"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/game" />
        <item
            android:id="@+id/nav_leagues"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/leagues" />
        <item
            android:id="@+id/nav_rules"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/rules" />
        <item
            android:id="@+id/nav_friends"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/friends" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/about" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/baseline_settings_white_36"
            android:title="@string/logout" />
    </group>
</menu>