<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/first"
            style="@style/LabelTextAlert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/firstPlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <Spinner
            android:id="@+id/spinnerFirst"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/first"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/second"
            style="@style/LabelTextAlert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/secondPlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerFirst" />
        <Spinner
            android:id="@+id/spinnerSecond"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/second"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/third"
            style="@style/LabelTextAlert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/thirdPlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerSecond" />
        <Spinner
            android:id="@+id/spinnerThird"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/third"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/fourth"
            style="@style/LabelTextAlert"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/fourthPlace"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/spinnerThird" />
        <Spinner
            android:id="@+id/spinnerFourth"
            android:layout_width="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/fourth"
            app:layout_constraintEnd_toEndOf="@id/guideline"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/score_1"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="0dp"
            android:text="@string/firstPoints"
            app:layout_constraintTop_toTopOf="@id/spinnerFirst"
            app:layout_constraintBottom_toBottomOf="@id/spinnerFirst"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/score_2"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/secondPoints"
            app:layout_constraintTop_toTopOf="@id/spinnerSecond"
            app:layout_constraintBottom_toBottomOf="@id/spinnerSecond"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/score_3"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginStart="4dp"
            android:text="@string/thirdPoints"
            app:layout_constraintTop_toTopOf="@id/spinnerThird"
            app:layout_constraintBottom_toBottomOf="@id/spinnerThird"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <TextView
            android:id="@+id/score_4"
            style="@style/LabelText"
            android:layout_width="0dp"
            android:layout_marginTop="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:text="@string/fourthPoints"
            app:layout_constraintTop_toTopOf="@id/spinnerFourth"
            app:layout_constraintBottom_toBottomOf="@id/spinnerFourth"
            app:layout_constraintStart_toStartOf="@id/guideline"
            />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.8" />




    </android.support.constraint.ConstraintLayout>

</ScrollView>

